--- a/web/package.json
+++ b/web/package.json
@@ -18,9 +18,11 @@
     "@redwoodjs/router": "2.2.0",
     "@redwoodjs/web": "2.2.0",
     "@supabase/supabase-js": "^1.35.6",
+    "daisyui": "^2.24.0",
     "prop-types": "15.8.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.8",
