--- a/web/package.json
+++ b/web/package.json
@@ -18,16 +18,19 @@
     "@redwoodjs/router": "2.2.0",
     "@redwoodjs/web": "2.2.0",
     "@supabase/supabase-js": "^1.35.6",
+    "@tailwindcss/line-clamp": "^0.4.0",
     "daisyui": "^2.24.0",
     "prop-types": "15.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "zustand": "^4.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.8",
     "postcss": "^8.4.14",
     "postcss-loader": "^7.0.1",
+    "tailwind-scrollbar": "^1.3.1",
     "tailwindcss": "^3.1.8"
   }
 }
