--- a/api/package.json
+++ b/api/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@redwoodjs/api": "2.2.0",
-    "@redwoodjs/graphql-server": "2.2.0",
+    "@redwoodjs/api": "^3.4.0",
+    "@redwoodjs/graphql-server": "^3.4.0",
     "jsonwebtoken": "^8.5.1"
   }
 }
