--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "packageManager": "yarn@3.2.1",
   "dependencies": {
+    "boring-avatars": "^1.7.0",
     "moment": "^2.29.4",
     "react-select": "^5.4.0"
   }
