--- a/package.json
+++ b/package.json
@@ -22,10 +22,5 @@
   "prisma": {
     "seed": "yarn rw exec seed"
   },
-  "packageManager": "yarn@3.2.1",
-  "dependencies": {
-    "boring-avatars": "^1.7.0",
-    "moment": "^2.29.4",
-    "react-select": "^5.4.0"
-  }
+  "packageManager": "yarn@3.2.1"
 }
