--- a/web/package.json
+++ b/web/package.json
@@ -19,11 +19,14 @@
     "@redwoodjs/web": "^3.4.0",
     "@supabase/supabase-js": "^1.35.6",
     "@tailwindcss/line-clamp": "^0.4.0",
+    "boring-avatars": "^1.7.0",
     "daisyui": "^2.24.0",
+    "moment": "^2.29.4",
     "prop-types": "15.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.4.0",
+    "react-select": "^5.7.0",
     "zustand": "^4.1.0"
   },
   "devDependencies": {
