--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     ]
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.11",
     "@redwoodjs/auth": "^3.4.0",
     "@redwoodjs/forms": "^3.4.0",
     "@redwoodjs/router": "^3.4.0",
@@ -25,7 +26,7 @@
     "prop-types": "15.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.4.0",
+    "react-icons": "^4.7.1",
     "react-select": "^5.7.0",
     "zustand": "^4.1.0"
   },
