--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "devDependencies": {
     "@redwoodjs/core": "^3.4.0",
-    "prettier-plugin-tailwindcss": "^0.1.13"
+    "prettier-plugin-tailwindcss": "^0.1.13",
+    "supabase": "^1.83.7"
   },
   "eslintConfig": {
     "extends": "@redwoodjs/eslint-config",
