--- a/redwood.toml
+++ b/redwood.toml
@@ -8,8 +8,11 @@
 [web]
   title = "Redwood App"
   port = 8910
-  apiUrl = "/.redwood/functions" # you can customise graphql and dbauth urls individually too: see https://redwoodjs.com/docs/app-configuration-redwood-toml#api-paths
+  apiUrl = "/api"
   includeEnvironmentVariables = [] # any ENV vars that should be available to the web side, see https://redwoodjs.com/docs/environment-variables#web
+  extendGraphQLImports = [
+    "src/upload.js",
+  ]
 [api]
   port = 8911
 [browser]
