--- a/web/package.json
+++ b/web/package.json
@@ -20,14 +20,16 @@
     "@redwoodjs/web": "^3.4.0",
     "@supabase/supabase-js": "^1.35.6",
     "@tailwindcss/line-clamp": "^0.4.0",
+    "axios": "^1.4.0",
     "boring-avatars": "^1.7.0",
-    "daisyui": "^2.24.0",
+    "daisyui": "^3.5.0",
     "moment": "^2.29.4",
     "prop-types": "15.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.7.1",
     "react-select": "^5.7.0",
+    "uuid": "^9.0.0",
     "zustand": "^4.1.0"
   },
   "devDependencies": {
@@ -35,6 +37,6 @@
     "postcss": "^8.4.14",
     "postcss-loader": "^7.0.1",
     "tailwind-scrollbar": "^1.3.1",
-    "tailwindcss": "^3.1.8"
+    "tailwindcss": "^3.3.3"
   }
 }
