--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "root": true
   },
   "engines": {
-    "node": "18.x",
-    "yarn": "3.x"
+    "node": ">=14.19 <=16.x",
+    "yarn": ">=1.15"
   },
   "prisma": {
     "seed": "yarn rw exec seed"
